Fix mobile home x-align

--- a/frontend/app/src/components/Home/styles/Home.sass
+++ b/frontend/app/src/components/Home/styles/Home.sass
@@ -88,3 +88,7 @@
 .Home-profile-image
   width: 300px
   border-radius: 150px
+
+@media screen and (min-width: 200px) and (max-width: 500px)
+  .Home-section-content-info
+    width: 100%
